--- a/core-tensorflow.ipynb
+++ b/core-tensorflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "center-medicine",
+   "id": "israeli-upgrade",
    "metadata": {},
    "source": [
     "# **Getting started with TensorFlow**\n",
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "moving-observation",
+   "id": "driven-crown",
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "directed-fifteen",
+   "id": "latin-celebrity",
    "metadata": {},
    "source": [
     "## **Operations on tensors**\n",
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "about-schema",
+   "id": "homeless-attention",
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "superb-reform",
+   "id": "likely-investigation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "floppy-register",
+   "id": "phantom-perspective",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "hungry-variable",
+   "id": "plain-agency",
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "tamil-burning",
+   "id": "manual-tradition",
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "harmful-allergy",
+   "id": "alert-schema",
    "metadata": {},
    "source": [
     "### **Point-wise operations**\n",
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "olive-fusion",
+   "id": "personalized-divorce",
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "aware-fifty",
+   "id": "dedicated-affiliation",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "upset-kruger",
+   "id": "heated-lease",
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aggregate-symbol",
+   "id": "female-methodology",
    "metadata": {},
    "source": [
     "### **Point-wise operations**\n",
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ancient-genome",
+   "id": "freelance-glasgow",
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "oriental-secondary",
+   "id": "danish-cancellation",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "exceptional-volunteer",
+   "id": "environmental-sheriff",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "informational-contrast",
+   "id": "patient-waters",
    "metadata": {},
    "source": [
     "You can convert a native TensorFlow tensor to a NumPy array using `.numpy()`."
@@ -344,8 +344,197 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "id": "amazing-breathing",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2], dtype=int32)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a_tf.numpy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "statistical-amplifier",
+   "metadata": {},
+   "source": [
+    "## **Linear Regression**\n",
+    "\n",
+    "Now let's use low level TensorFlow operations to implement linear regression.\n",
+    "\n",
+    "### **Toy Dataset**\n",
+    "\n",
+    "We'll model the following function\n",
+    "\n",
+    "$$\n",
+    "y = 2x + 10\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "maritime-baghdad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X: [0. 1. 2. 3. 4. 5. 6. 7. 8. 9.]\n",
+      "Y: [10. 12. 14. 16. 18. 20. 22. 24. 26. 28.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = tf.constant(range(10), dtype=tf.float32)\n",
+    "Y = 2 * X + 10\n",
+    "\n",
+    "print(\"X: {}\".format(X))\n",
+    "print(\"Y: {}\".format(Y))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "damaged-sacrifice",
+   "metadata": {},
+   "source": [
+    "Let's also create a test data set to evaluate our models:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "stylish-young",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_test: [10. 11. 12. 13. 14. 15. 16. 17. 18. 19.]\n",
+      "Y_test: [30. 32. 34. 36. 38. 40. 42. 44. 46. 48.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_test = tf.constant(range(10, 20), dtype=tf.float32)\n",
+    "Y_test = 2 * X_test + 10\n",
+    "\n",
+    "print(\"X_test: {}\".format(X_test))\n",
+    "print(\"Y_test: {}\".format(Y_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "worldwide-islam",
+   "metadata": {},
+   "source": [
+    "### **Loss function**\n",
+    "\n",
+    "The simplest model we can build is a model that for each value of `x` returns the sample mean of the training set:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "opened-federal",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict_mean(X):\n",
+    "    y_hat = [Y.numpy().mean()] * len(X)\n",
+    "    return y_hat\n",
+    "\n",
+    "Y_hat = predict_mean(X_test)    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "detected-station",
+   "metadata": {},
+   "source": [
+    "Using *Mean Squared Error* as the error function, our loss is\n",
+    "\n",
+    "$$\n",
+    "\\text{MSE} = \\frac{1}{m}\\sum_{i=1}^m(\\hat{Y}_i - Y_i)^2\n",
+    "$$\n",
+    "\n",
+    "For our simple model the loss is then:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "opened-cooling",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "33.0"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loss = tf.reduce_mean((Y_hat - Y)**2)\n",
+    "loss.numpy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "surrounded-biotechnology",
+   "metadata": {},
+   "source": [
+    "This very bad value for the MSE loss above will give us a baseline to compare how a more complex model is doing.\n",
+    "\n",
+    "Now, if $\\hat{Y}$ represents the vector containing our model predictions when we use a linear regression model, then we have:\n",
+    "\n",
+    "$$\n",
+    "\\hat{Y} = w_0X + w_1\n",
+    "$$\n",
+    "\n",
+    "we can write a loss function taking as arguments the coefficients (or parameters) of the model:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "elect-proceeding",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def loss_mse(X, Y, w0, w1):\n",
+    "    Y_hat = w0 * X + w1\n",
+    "    return tf.reduce_mean((Y_hat - Y)**2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "digital-technician",
+   "metadata": {},
+   "source": [
+    "### **Gradient function**"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "prompt-cherry",
+   "id": "statutory-virtue",
    "metadata": {},
    "outputs": [],
    "source": []
