TFRecord and tf.example

--- a/tf-record_tf-example.ipynb
+++ b/tf-record_tf-example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "disturbed-panel",
+   "id": "quantitative-incident",
    "metadata": {},
    "source": [
     "# **TFRecord and `tf.Example`**\n",
@@ -32,8 +32,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "intelligent-bridal",
+   "execution_count": 3,
+   "id": "inside-panama",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "suspected-indianapolis",
+   "id": "curious-prize",
    "metadata": {},
    "source": [
     "## **`tf.Example`**\n",
@@ -83,8 +83,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "frequent-hometown",
+   "execution_count": 4,
+   "id": "serial-remedy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,18 +107,46 @@
   },
   {
    "cell_type": "markdown",
-   "id": "imperial-keyboard",
+   "id": "italian-nursery",
    "metadata": {},
    "source": [
     "Note: to stay simple, this example only uses scalar inputs. The simplest way to handle non-scalar features is to use `tf.serialize_tensor` to convert tensors to binary-strings. Strings are scalars in TensorFlow. Use `tf.parse_tensor` to convert the binary-string back to a tensor.\n",
     "\n",
-    "Below are some examples of how these functions work. Note the varying"
+    "Below are some examples of how these functions work. Note the varying input types and the standardised output types. If the input type for a function does not match one of the coercible types stated above, the function will raise an exception (e.g. `_int64_feature(1.0)` will error out, since `1.0` is a float, so should be used with the `_float_feature` function instead)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "eleven-champagne",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bytes_list {\n",
+      "  value: \"test_string\"\n",
+      "}\n",
+      "\n",
+      "bytes_list {\n",
+      "  value: \"test_bytes\"\n",
+      "}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(_bytes_feature(b\"test_string\"))\n",
+    "print(_bytes_feature(u\"test_bytes\".encode(\"utf8\")))\n",
+    "\n",
+    "print(_float)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "extended-deposit",
+   "id": "missing-hostel",
    "metadata": {},
    "outputs": [],
    "source": []
