--- a/6_keras-sequential-api.ipynb
+++ b/6_keras-sequential-api.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "exceptional-direction",
+   "id": "brown-gateway",
    "metadata": {},
    "source": [
     "# **Introducing the Keras Sequential API**\n",
@@ -13,8 +13,56 @@
     "2. Learn how to use feature columns in a Keras model\n",
     "3. Learn how to train a model with Keras\n",
     "4. Learn how to save/load and deploy a Keras model on GCP\n",
-    "5. Learn how to deploy and make predictions with a"
+    "5. Learn how to deploy and make predictions with a Keras model\n",
+    "\n",
+    "## **Introduction**\n",
+    "\n",
+    "The Keras Sequential API allows you to create TensorFlow models **layer-by-layer**. This is useful for building most kind of meachine learning models but **it does not allow you to create model that share layers, re-use layers or have multiple inputs or outputs**.\n",
+    "\n",
+    "In this lab, we'll see how to build a simple deep neural network (DNN) model using Keras sequential API and feature columns. Once we have trained our model, we will deploy it using AI Platform and see how to call our model for online prediction."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "general-houston",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.4.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import datetime\n",
+    "import os\n",
+    "import shutil\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import tensorflow as tf\n",
+    "\n",
+    "from matplotlib import pyplot as plt\n",
+    "%matplotlib inline\n",
+    "from tensorflow import keras\n",
+    "\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense, DenseFeatures\n",
+    "from tensorflow.keras.callbacks import TensorBoard\n",
+    "\n",
+    "print(tf.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "satisfactory-israel",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
