--- a/introduction-to-tensorflow/2_dataset-api.ipynb
+++ b/introduction-to-tensorflow/2_dataset-api.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "frozen-namibia",
+   "id": "surprised-banking",
    "metadata": {},
    "source": [
     "# **TensorFlow Dataset API**\n",
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "sonic-genealogy",
+   "id": "cubic-cycling",
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "written-active",
+   "id": "varied-parliament",
    "metadata": {},
    "source": [
     "## **Loading data from memory**\n",
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "corrected-field",
+   "id": "lovely-input",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "secondary-validation",
+   "id": "uniform-cloud",
    "metadata": {},
    "source": [
     "We begin with implementing a function that takes as input\n",
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "fleet-confusion",
+   "id": "pacific-madonna",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "piano-memorial",
+   "id": "executive-exchange",
    "metadata": {},
    "source": [
     "Let's test our function by iterating twice over our data set in batches of 3 data points:"
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "afraid-cabinet",
+   "id": "desirable-elevation",
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abroad-commons",
+   "id": "grave-temperature",
    "metadata": {},
    "source": [
     "### **Loss function and gradients**"
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "danish-madonna",
+   "id": "rapid-survival",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "vulnerable-employee",
+   "id": "local-evans",
    "metadata": {},
    "source": [
     "### **Training loop**\n",
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "sorted-realtor",
+   "id": "genetic-cathedral",
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "organized-passing",
+   "id": "selective-meditation",
    "metadata": {},
    "source": [
     "## **Loading data from disk**\n",
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "medieval-desire",
+   "id": "naval-efficiency",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "reflected-programmer",
+   "id": "immediate-spirituality",
    "metadata": {},
    "source": [
     "### **Use `tf.data` to read the CSV files**\n",
@@ -301,30 +301,29 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "northern-mentor",
+   "id": "published-accommodation",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Defining the feature names into a list `CSV_COLUMNS`\n",
-    "\n",
     "CSV_COLUMNS = [\n",
-    "    \"id\",\n",
-    "    \"pickup_datetime\",\n",
-    "    \"passenger_count\",\n",
-    "    \"pickup_longitude\",\n",
-    "    \"pickup_latitude\",\n",
-    "    \"dropoff_longitude\",\n",
-    "    \"dropoff_latitude\",\n",
-    "    \"trip_duration\"\n",
+    "    'fare_amount',\n",
+    "    'pickup_datetime',\n",
+    "    'pickup_longitude',\n",
+    "    'pickup_latitude',\n",
+    "    'dropoff_longitude',\n",
+    "    'dropoff_latitude',\n",
+    "    'passenger_count',\n",
+    "    'key'\n",
     "]\n",
-    "LABEL_COLUMN = \"trip_duration\"\n",
+    "LABEL_COLUMN = 'fare_amount'\n",
     "# Defining the default values into a list `DEFAULTS`\n",
-    "DEFAULTS = [[\"na\"], [\"na\"], [0.0], [0.0], [0.0], [0.0], [0.0], [\"na\"]]"
+    "DEFAULTS = [[0.0], ['na'], [0.0], [0.0], [0.0], [0.0], [0.0], ['na']]"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "removable-vaccine",
+   "id": "iraqi-reader",
    "metadata": {},
    "source": [
     "Let's now wrap the call to `make_csv_dataset` into its own function that will take only the file pattern (i.e. glob) where the data set files are to be located:"
@@ -333,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "brutal-kenya",
+   "id": "lesser-brother",
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "practical-killing",
+   "id": "greater-gauge",
    "metadata": {},
    "source": [
     "Note that this is a prefetched data set, where each element is an `OrderedDict` whose keys are the feature names and whose values are tensors of shape `(1,)` (i.e. vectors)."
@@ -365,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "after-teacher",
+   "id": "documented-processing",
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unexpected-fluid",
+   "id": "intimate-austria",
    "metadata": {},
    "source": [
     "### **Transforming the features**\n",
@@ -424,11 +423,11 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "prerequisite-monitor",
+   "id": "declared-rental",
    "metadata": {},
    "outputs": [],
    "source": [
-    "UNWANTED_COLS = [\"pickup_datetime\", \"id\"]\n",
+    "UNWANTED_COLS = [\"pickup_datetime\", \"key\"]\n",
     "\n",
     "# Let's define the features_and_labels() method\n",
     "def features_and_labels(row_data):\n",
@@ -444,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "virgin-certification",
+   "id": "golden-junior",
    "metadata": {},
    "source": [
     "Let's iterate over 2 examples from our `tempds` dataset and apply our `features_and_labels` function to each of the examples to make sure it's working"
@@ -453,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "complimentary-accreditation",
+   "id": "literary-arnold",
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +498,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "palestinian-protection",
+   "id": "metric-killer",
    "metadata": {},
    "source": [
     "### **Batching**\n",
@@ -510,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "distinct-completion",
+   "id": "demographic-solomon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "starting-pressing",
+   "id": "intellectual-crowd",
    "metadata": {},
    "source": [
     "Let's check that our batches are of the right size."
@@ -532,7 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "impossible-perry",
+   "id": "insured-rates",
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "infectious-offset",
+   "id": "enclosed-throat",
    "metadata": {},
    "source": [
     "### **Shuffling**\n",
@@ -586,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "painful-juvenile",
+   "id": "personalized-lottery",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +606,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "attended-attribute",
+   "id": "ranking-driving",
    "metadata": {},
    "source": [
     "Let's check that our function works well in both modes."
@@ -616,7 +615,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "southwest-mercury",
+   "id": "reserved-durham",
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +634,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "arctic-hearing",
+   "id": "structured-grass",
    "metadata": {},
    "outputs": [
     {
@@ -647,14 +646,14 @@
     }
    ],
    "source": [
-    "tempds = create_dataset(\"data/taxi-train*\", batch_size=2, mode=\"eval\")\n",
+    "tempds = create_dataset(\"data/taxi-valid*\", batch_size=2, mode=\"eval\")\n",
     "print(list(tempds.take(1)))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "julian-event",
+   "id": "lovely-inside",
    "metadata": {},
    "outputs": [],
    "source": []
