--- a/introduction-to-tensorflow/1_core-tensorflow.ipynb
+++ b/introduction-to-tensorflow/1_core-tensorflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "institutional-priest",
+   "id": "military-officer",
    "metadata": {},
    "source": [
     "# **Getting started with TensorFlow**\n",
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "underlying-bikini",
+   "id": "usual-bulgarian",
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "regular-person",
+   "id": "stupid-python",
    "metadata": {},
    "source": [
     "## **Operations on tensors**\n",
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "falling-embassy",
+   "id": "referenced-cuisine",
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "comprehensive-question",
+   "id": "dense-windows",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "accompanied-reviewer",
+   "id": "entitled-account",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "industrial-disposition",
+   "id": "champion-brook",
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "middle-death",
+   "id": "inner-works",
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "economic-application",
+   "id": "sublime-syracuse",
    "metadata": {},
    "source": [
     "### **Point-wise operations**\n",
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "dress-soviet",
+   "id": "powered-breed",
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "composed-stockholm",
+   "id": "eleven-repository",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ignored-selling",
+   "id": "noble-opportunity",
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "certain-classics",
+   "id": "crucial-butler",
    "metadata": {},
    "source": [
     "### **Point-wise operations**\n",
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "cardiac-painting",
+   "id": "focused-sword",
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "representative-cambodia",
+   "id": "gothic-mason",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "incident-savannah",
+   "id": "blond-disability",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "radical-stopping",
+   "id": "brazilian-lesson",
    "metadata": {},
    "source": [
     "You can convert a native TensorFlow tensor to a NumPy array using `.numpy()`."
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "vocal-surge",
+   "id": "accomplished-skating",
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ordered-juvenile",
+   "id": "mineral-conference",
    "metadata": {},
    "source": [
     "## **Linear Regression**\n",
@@ -384,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "turned-number",
+   "id": "completed-anime",
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "healthy-backup",
+   "id": "latest-wealth",
    "metadata": {},
    "source": [
     "Let's also create a test data set to evaluate our models:"
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "sublime-badge",
+   "id": "going-commercial",
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "atlantic-wagner",
+   "id": "built-translator",
    "metadata": {},
    "source": [
     "### **Loss function**\n",
@@ -448,7 +448,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "powerful-gospel",
+   "id": "fluid-reading",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "surprised-pound",
+   "id": "honest-calvin",
    "metadata": {},
    "source": [
     "Using *Mean Squared Error* as the error function, our loss is\n",
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "acknowledged-people",
+   "id": "humanitarian-hollywood",
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "blocked-commitment",
+   "id": "muslim-singing",
    "metadata": {},
    "source": [
     "This very bad value for the MSE loss above will give us a baseline to compare how a more complex model is doing.\n",
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "terminal-amazon",
+   "id": "therapeutic-retirement",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "equipped-making",
+   "id": "direct-resident",
    "metadata": {},
    "source": [
     "### **Gradient function**\n",
@@ -538,37 +538,37 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "variable-reality",
+   "cell_type": "markdown",
+   "id": "opened-episode",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "```\n",
     "with tf.GradientTape() as tape:\n",
-    "    loss = # loss computation"
+    "    loss = # loss computation\n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "north-neighbor",
+   "id": "attended-enclosure",
    "metadata": {},
    "source": [
     "This will allow us to later compute the gradients of any tensor computed within the `tf.GradientTape` context with respect to instances of `tf.Variable`"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "legislative-computer",
+   "cell_type": "markdown",
+   "id": "flush-mission",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "gradients = tape.gradient(loss, [w0, w1])"
+    "```\n",
+    "gradients = tape.gradient(loss, [w0, w1])\n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "focused-surveillance",
+   "id": "outer-wright",
    "metadata": {},
    "source": [
     "Let's illustrate this procedure by computing the gradient of the loss function with respect to the model weights:"
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "internal-archives",
+   "id": "unlimited-taste",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "cellular-driver",
+   "id": "pointed-boring",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "elder-departure",
+   "id": "stone-quantum",
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bored-lawsuit",
+   "id": "experienced-pencil",
    "metadata": {},
    "source": [
     "### **Training loop**\n",
@@ -633,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "pressed-asset",
+   "id": "modern-weight",
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "embedded-perth",
+   "id": "dependent-merchandise",
    "metadata": {},
    "source": [
     "Now let's compare the test loss for this linear regression model to the test loss from the baseline model that outputs always the mean of the test set."
@@ -699,7 +699,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "empty-sunrise",
+   "id": "entertaining-environment",
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "thousand-treasury",
+   "id": "orange-bumper",
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "metropolitan-beginning",
+   "id": "backed-sunrise",
    "metadata": {},
    "source": [
     "This is indeed much better!"
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "chicken-nowhere",
+   "id": "competitive-granny",
    "metadata": {},
    "source": [
     "## **Non-linear regression**\n",
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "conservative-greeting",
+   "id": "pediatric-electronics",
    "metadata": {},
    "source": [
     "### **Toy data set**"
@@ -769,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "interracial-click",
+   "id": "effective-listening",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -780,7 +780,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "original-cooperative",
+   "id": "eastern-return",
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +805,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "introductory-stopping",
+   "id": "decimal-cornell",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -821,7 +821,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "portuguese-carter",
+   "id": "aggregate-garage",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "smoking-paste",
+   "id": "opening-portuguese",
    "metadata": {},
    "source": [
     "### **Loss function**"
@@ -840,7 +840,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "economic-cocktail",
+   "id": "electoral-jaguar",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -850,7 +850,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "divine-patch",
+   "id": "wound-pitch",
    "metadata": {},
    "source": [
     "### **Gradient function**"
@@ -859,7 +859,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "described-terrorism",
+   "id": "stopped-contents",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "postal-filing",
+   "id": "alleged-bronze",
    "metadata": {},
    "source": [
     "### **Training loop**"
@@ -880,7 +880,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "joint-seminar",
+   "id": "material-butterfly",
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +950,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "rolled-worthy",
+   "id": "russian-growth",
    "metadata": {},
    "outputs": [],
    "source": []
